--- a/src/index.css
+++ b/src/index.css
@@ -21,6 +21,7 @@ body {
   justify-content: center;
   min-width: 320px;
   min-height: 100vh;
+  background-image: url('./assets/bg.jpg');
 }
 
 * {
@@ -36,15 +37,16 @@ body {
 }
 
 .board h1 {
-  color: #eee;
+  color: #E2E4F3;
+  font-size: 50px;
   margin-bottom: 16px;
 }
 
 .board button {
   padding: 8px 12px;
-  margin: 25px;
+  border: solid 2px #eee;
   background: transparent;
-  border: 2px solid #eee;
+  margin: 25px;
   color: #eee;
   width: 100px;
   border-radius: 5px;
@@ -54,8 +56,8 @@ body {
 }
 
 .board button:hover {
-  background: #eee;
-  color: #222;
+  border: solid 2px transparent;
+  background: linear-gradient(#E65895, #BC6BE8);
 }
 
 .board .game {
@@ -83,7 +85,7 @@ body {
 
 .square.is-selected {
   color: #fff;
-  background: #09f;
+  background: #3E9FFF;
 }
 
 .winner {
@@ -98,16 +100,20 @@ body {
 }
 
 .winner .text {
-  background: #111;
-  height: 300px;
+  background: #393F6E;
+  height: 340px;
   width: 320px;
-  border: 2px solid #eee;
   border-radius: 10px;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   gap: 20px;
+}
+
+.winner .text img {
+  width: 200px;
+  margin-top: 20px;
 }
 
 .winner .win {
